fixed the horizontal scroll

--- a/css/style.css
+++ b/css/style.css
@@ -4,6 +4,7 @@
 html,body{
 	font-family: 'Crimson Text', serif;
 	font-size: 1.2rem;
+	overflow-x: hidden;
 }
 
 h1,h2,h3,h4,h5,h6{
